--- a/src/components/filterpanel/FilterPanel.css
+++ b/src/components/filterpanel/FilterPanel.css
@@ -1,136 +1,145 @@
 /* フィルターパネルのコンテナ */
 .filterpanel-container {
-  display: flex; /* フレックスボックスを使用 */
-  flex-direction: column; /* 縦方向に配置 */
-  gap: 10px; /* 要素間の間隔を設定 */
-  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out; /* トランジションを設定 */
-  transform: translateX(-100%); /* 初期状態で左に隠す */
-  opacity: 0; /* 初期状態で透明にする */
-  position: fixed; /* 固定位置を設定 */
-  top: 60px; /* 上に寄せる */
-  left: 10px; /* 左に寄せる */
-  height: auto; /* 高さを自動に設定 */
-  z-index: 1000; /* Zインデックスを設定 */
-  width: 250px; /* 横幅を300pxに設定 */
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  transform: translateY(-100%);
+  opacity: 0;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: auto;
+  z-index: 1000;
+  width: 80%;
+  max-width: 370px;
 }
 
 .filterpanel-container.open {
-  transform: translateX(0); /* 表示時に左からスライドイン */
-  opacity: 1; /* 不透明にする */
+  transform: translate(-50%, -50%);
+  opacity: 1;
 }
 
 /* FilterPanelのスタイル */
 .filter-panel {
-  padding: 20px; /* 内側の余白を設定 */
-  background-color: rgba(255, 255, 255, 0.9); /* 背景色を設定 */
-  border-radius: 8px; /* 角を丸くする */
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* ボックスシャドウを設定 */
-  position: relative; /* 相対位置を設定 */
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  position: relative;
+  max-height: 80vh;
+  /* 最大高さを設定して画面上部に広がらないようにする */
+  overflow-y: auto;
+  /* コンテンツが多い場合にスクロール可能にする */
+  width: 100%;
+  /* 横幅を100%に設定 */
 }
 
 /* Closeボタンのスタイル */
 .close-button {
-  position: absolute; /* 絶対位置を設定 */
-  top: 20px; /* 上からの位置を設定 */
-  right: 20px; /* 右からの位置を設定 */
-  background: none; /* 背景をなしに設定 */
-  border: none; /* ボーダーをなしに設定 */
-  font-size: 30px; /* フォントサイズを設定 */
-  cursor: pointer; /* カーソルをポインタに設定 */
-  color: #333; /* 文字色を設定 */
-  transition: color 0.3s ease; /* 色のトランジションを設定 */
+  position: absolute;
+  top: 40px;
+  right: 20px;
+  background: none;
+  border: none;
+  font-size: 30px;
+  cursor: pointer;
+  color: #333;
+  transition: color 0.3s ease;
 }
 
 .close-button:hover {
-  color: #007bff; /* ホバー時の文字色を設定 */
+  color: #007bff;
 }
 
 .filter-item {
-  display: flex; /* フレックスボックスを使用 */
-  align-items: center; /* 中央揃え */
-  margin-bottom: 8px; /* 下部の余白を設定 */
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
 }
 
 /* チェックボックスのカスタマイズ */
 .filter-item input[type='checkbox'] {
-  display: none; /* デフォルトのチェックボックスを非表示にする */
+  display: none;
 }
 
-.filter-item input[type='checkbox'] + .custom-checkbox {
-  width: 16px; /* 幅を設定 */
-  height: 16px; /* 高さを設定 */
-  border: 2px solid #007bff; /* ボーダーを設定 */
-  border-radius: 3px; /* 角を丸くする */
-  display: inline-block; /* インラインブロック要素に設定 */
-  position: relative; /* 相対位置を設定 */
-  cursor: pointer; /* カーソルをポインタに設定 */
+.filter-item input[type='checkbox']+.custom-checkbox {
+  width: 16px;
+  height: 16px;
+  border: 2px solid #007bff;
+  border-radius: 3px;
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
 }
 
-.filter-item input[type='checkbox']:checked + .custom-checkbox {
-  background-color: #007bff; /* チェック時の背景色を設定 */
+.filter-item input[type='checkbox']:checked+.custom-checkbox {
+  background-color: #007bff;
 }
 
-.filter-item input[type='checkbox']:checked + .custom-checkbox::after {
-  content: ''; /* 擬似要素の内容を設定 */
-  position: absolute; /* 絶対位置を設定 */
-  top: 2px; /* 上からの位置を設定 */
-  left: 5px; /* 左からの位置を設定 */
-  width: 4px; /* 幅を設定 */
-  height: 8px; /* 高さを設定 */
-  border: solid white; /* ボーダーを設定 */
-  border-width: 0 2px 2px 0; /* ボーダーの幅を設定 */
-  transform: rotate(45deg); /* 回転を設定 */
+.filter-item input[type='checkbox']:checked+.custom-checkbox::after {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 5px;
+  width: 4px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
 }
 
 .filter-details {
-  display: flex; /* フレックスボックスを使用 */
-  align-items: center; /* 中央揃え */
-  margin-left: 8px; /* 左の余白を設定 */
+  display: flex;
+  align-items: center;
+  margin-left: 8px;
 }
 
 .marker-color {
-  width: 16px; /* 幅を設定 */
-  height: 16px; /* 高さを設定 */
-  display: inline-block; /* インラインブロック要素に設定 */
-  margin-right: 8px; /* 右の余白を設定 */
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  margin-right: 8px;
 }
 
 .filter-details span {
-  white-space: nowrap; /* ホワイトスペースを設定 */
-  overflow: hidden; /* オーバーフローを隠す */
-  text-overflow: ellipsis; /* テキストオーバーフローを省略記号に設定 */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .filter-details .area-name {
-  position: relative; /* 相対位置を設定 */
-  cursor: pointer; /* カーソルをポインタに設定 */
-  white-space: nowrap; /* ホワイトスペースを設定 */
-  overflow: hidden; /* オーバーフローを隠す */
-  text-overflow: ellipsis; /* テキストオーバーフローを省略記号に設定 */
-  max-width: 100px; /* 最大幅を設定してはみ出しを防ぐ */
+  position: relative;
+  cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 300px;
 }
 
 .filter-details .area-name:hover::after {
-  content: attr(data-fullname); /* データ属性の内容を設定 */
-  position: absolute; /* 絶対位置を設定 */
-  left: 0; /* 左からの位置を設定 */
-  top: 100%; /* 上からの位置を設定 */
-  white-space: nowrap; /* ホワイトスペースを設定 */
-  background-color: #333; /* 背景色を設定 */
-  color: #fff; /* 文字色を設定 */
-  padding: 5px; /* 内側の余白を設定 */
-  border-radius: 3px; /* 角を丸くする */
-  z-index: 10; /* Zインデックスを設定 */
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* ボックスシャドウを設定 */
-  transform: translateY(5px); /* ツールチップの位置を微調整 */
-  visibility: visible; /* 可視性を設定 */
-  opacity: 1; /* 不透明度を設定 */
+  content: attr(data-fullname);
+  position: absolute;
+  left: 0;
+  top: 100%;
+  white-space: nowrap;
+  background-color: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 3px;
+  z-index: 10;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  transform: translateY(5px);
+  visibility: visible;
+  opacity: 1;
 }
 
 .filter-details .area-name::after {
-  visibility: hidden; /* 初期状態で非表示に設定 */
-  opacity: 0; /* 初期状態で透明に設定 */
-  transition: opacity 0.2s ease-in-out; /* 不透明度のトランジションを設定 */
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
 }
 
 /* レスポンシブデザイン */
