--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+html, body, #app {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .app-container {
   position: relative;
   width: 100%;
@@ -38,4 +45,11 @@
 .initial-background.hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+.error-message {
+  color: red;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 20px;
 }
