--- a/src/components/searchresults/SearchResults.module.css
+++ b/src/components/searchresults/SearchResults.module.css
@@ -16,3 +16,8 @@
 .searchResultItem:hover {
   background-color: #f0f0f0;
 }
+
+.searchResultItem:focus {
+  outline: none;
+  background-color: #e0e0e0;
+}
